Simplify PromptService unit tests
Use straightforward per-function test cases for easier understanding and maintenance.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>