@@ -3,21 +3,19 @@ package com.promptshop.backend.prompt;
 import com.promptshop.backend.common.NotFoundException;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Sort;
 
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -31,165 +29,164 @@ class PromptServiceTest {
     private PromptService promptService;
 
     @Test
-    void listPublicPromptsReturnsMappedResponses() {
-        Prompt prompt = prompt(1L, "Title", true);
+    void listPublicPrompts_returnsPublishedPrompts() {
+        Prompt prompt = samplePrompt(1L, "Public prompt", true);
         when(promptRepository.findByPublishedTrueOrderByCreatedAtDesc()).thenReturn(List.of(prompt));
 
-        List<PromptResponse> responses = promptService.listPublicPrompts();
+        List<PromptResponse> result = promptService.listPublicPrompts();
 
-        assertEquals(1, responses.size());
-        assertEquals(1L, responses.getFirst().id());
-        assertEquals("Title", responses.getFirst().title());
-        assertTrue(responses.getFirst().published());
+        assertEquals(1, result.size());
+        assertEquals("Public prompt", result.get(0).title());
+        assertTrue(result.get(0).published());
     }
 
     @Test
-    void getPublicPromptReturnsMappedResponse() {
-        Prompt prompt = prompt(3L, "Prompt 3", true);
-        when(promptRepository.findByIdAndPublishedTrue(3L)).thenReturn(Optional.of(prompt));
+    void getPublicPrompt_returnsPromptById() {
+        Prompt prompt = samplePrompt(2L, "Prompt #2", true);
+        when(promptRepository.findByIdAndPublishedTrue(2L)).thenReturn(Optional.of(prompt));
 
-        PromptResponse response = promptService.getPublicPrompt(3L);
+        PromptResponse result = promptService.getPublicPrompt(2L);
 
-        assertEquals(3L, response.id());
-        assertEquals("Prompt 3", response.title());
+        assertEquals(2L, result.id());
+        assertEquals("Prompt #2", result.title());
     }
 
     @Test
-    void getPublicPromptThrowsWhenNotFound() {
-        when(promptRepository.findByIdAndPublishedTrue(404L)).thenReturn(Optional.empty());
+    void getPublicPrompt_throwsWhenPromptMissing() {
+        when(promptRepository.findByIdAndPublishedTrue(99L)).thenReturn(Optional.empty());
 
-        NotFoundException exception = assertThrows(NotFoundException.class, () -> promptService.getPublicPrompt(404L));
+        NotFoundException error = assertThrows(NotFoundException.class, () -> promptService.getPublicPrompt(99L));
 
-        assertEquals("Prompt not found", exception.getMessage());
+        assertEquals("Prompt not found", error.getMessage());
     }
 
     @Test
-    void createPromptTrimsFieldsAndSaves() {
+    void listAllPrompts_returnsAllPrompts() {
+        Prompt first = samplePrompt(1L, "First", false);
+        Prompt second = samplePrompt(2L, "Second", true);
+        when(promptRepository.findAll(Sort.by(Sort.Direction.DESC, "createdAt")))
+                .thenReturn(List.of(second, first));
+
+        List<PromptResponse> result = promptService.listAllPrompts();
+
+        assertEquals(2, result.size());
+        assertEquals("Second", result.get(0).title());
+        assertEquals("First", result.get(1).title());
+    }
+
+    @Test
+    void createPrompt_savesTrimmedFields() {
         PromptRequest request = new PromptRequest(
-                "  New title  ",
-                "  Short description  ",
-                "  Content text  ",
-                new BigDecimal("19.99"),
-                "  Marketing  ",
-                "  email,copywriting  ",
-                "  https://img.test/p.png  ",
+                "  New title ",
+                " short description  ",
+                " content text  ",
+                new BigDecimal("10.00"),
+                " marketing  ",
+                " tag1,tag2  ",
+                " https://img/p.png  ",
                 true
         );
         when(promptRepository.save(any(Prompt.class))).thenAnswer(invocation -> {
             Prompt saved = invocation.getArgument(0);
-            saved.setId(9L);
+            saved.setId(7L);
             return saved;
         });
 
-        PromptResponse response = promptService.createPrompt(request);
+        PromptResponse result = promptService.createPrompt(request);
 
-        assertEquals(9L, response.id());
-        assertEquals("New title", response.title());
-        assertEquals("Short description", response.shortDescription());
-        assertEquals("Content text", response.contentText());
-        assertEquals("Marketing", response.category());
-        assertEquals("email,copywriting", response.tags());
-        assertEquals("https://img.test/p.png", response.imageUrl());
-        assertTrue(response.published());
+        assertEquals(7L, result.id());
+        assertEquals("New title", result.title());
+        assertEquals("short description", result.shortDescription());
+        assertEquals("content text", result.contentText());
+        assertEquals("marketing", result.category());
+        assertEquals("tag1,tag2", result.tags());
+        assertEquals("https://img/p.png", result.imageUrl());
+        assertTrue(result.published());
     }
 
     @Test
-    void updatePromptUpdatesExistingPrompt() {
-        Prompt existing = prompt(5L, "Old title", false);
-        when(promptRepository.findById(5L)).thenReturn(Optional.of(existing));
+    void updatePrompt_updatesPromptFields() {
+        Prompt existing = samplePrompt(3L, "Old title", false);
+        when(promptRepository.findById(3L)).thenReturn(Optional.of(existing));
         when(promptRepository.save(existing)).thenReturn(existing);
 
         PromptRequest request = new PromptRequest(
-                "  Updated title  ",
-                "  Updated short description  ",
-                "  Updated content  ",
-                new BigDecimal("29.99"),
-                "  Productivity  ",
-                "  focus,time  ",
-                "  https://img.test/new.png  ",
+                " Updated title ",
+                " updated short ",
+                " updated content ",
+                new BigDecimal("20.00"),
+                " productivity ",
+                " focus,time ",
+                " https://img/new.png ",
                 true
         );
 
-        PromptResponse response = promptService.updatePrompt(5L, request);
+        PromptResponse result = promptService.updatePrompt(3L, request);
 
-        assertEquals("Updated title", response.title());
-        assertEquals("Updated short description", response.shortDescription());
-        assertEquals("Updated content", response.contentText());
-        assertEquals(new BigDecimal("29.99"), response.priceUsd());
-        assertEquals("Productivity", response.category());
-        assertEquals("focus,time", response.tags());
-        assertEquals("https://img.test/new.png", response.imageUrl());
-        assertTrue(response.published());
+        assertEquals("Updated title", result.title());
+        assertEquals("updated short", result.shortDescription());
+        assertEquals("updated content", result.contentText());
+        assertEquals(new BigDecimal("20.00"), result.priceUsd());
+        assertEquals("productivity", result.category());
+        assertEquals("focus,time", result.tags());
+        assertEquals("https://img/new.png", result.imageUrl());
+        assertTrue(result.published());
     }
 
     @Test
-    void deletePromptDeletesPromptWhenFound() {
-        Prompt existing = prompt(8L, "Delete me", true);
-        when(promptRepository.findById(8L)).thenReturn(Optional.of(existing));
+    void deletePrompt_deletesPromptWhenFound() {
+        Prompt existing = samplePrompt(4L, "To delete", true);
+        when(promptRepository.findById(4L)).thenReturn(Optional.of(existing));
 
-        promptService.deletePrompt(8L);
+        promptService.deletePrompt(4L);
 
-        verify(promptRepository, times(1)).delete(existing);
+        verify(promptRepository).delete(existing);
     }
 
     @Test
-    void getPublishedPromptsByIdsPreservesRequestedOrder() {
-        Prompt first = prompt(1L, "First", true);
-        Prompt second = prompt(2L, "Second", true);
-        when(promptRepository.findByIdInAndPublishedTrue(List.of(2L, 1L))).thenReturn(List.of(first, second));
+    void getPublishedPromptsByIds_returnsPromptsInRequestedOrder() {
+        Prompt one = samplePrompt(1L, "One", true);
+        Prompt two = samplePrompt(2L, "Two", true);
+        when(promptRepository.findByIdInAndPublishedTrue(List.of(2L, 1L))).thenReturn(List.of(one, two));
 
         List<Prompt> result = promptService.getPublishedPromptsByIds(List.of(2L, 1L));
 
-        assertEquals(2, result.size());
-        assertEquals(2L, result.getFirst().getId());
+        assertEquals(2L, result.get(0).getId());
         assertEquals(1L, result.get(1).getId());
     }
 
     @Test
-    void getPublishedPromptsByIdsThrowsWhenAnyPromptMissing() {
-        Prompt only = prompt(1L, "Only one", true);
-        when(promptRepository.findByIdInAndPublishedTrue(List.of(1L, 2L))).thenReturn(List.of(only));
+    void getPublishedPromptsByIds_throwsWhenMissingPrompt() {
+        Prompt one = samplePrompt(1L, "One", true);
+        when(promptRepository.findByIdInAndPublishedTrue(List.of(1L, 2L))).thenReturn(List.of(one));
 
-        NotFoundException exception = assertThrows(
+        NotFoundException error = assertThrows(
                 NotFoundException.class,
                 () -> promptService.getPublishedPromptsByIds(List.of(1L, 2L))
         );
 
-        assertEquals("One or more selected prompts do not exist", exception.getMessage());
+        assertEquals("One or more selected prompts do not exist", error.getMessage());
     }
 
     @Test
-    void totalPromptsReturnsRepositoryCount() {
-        when(promptRepository.count()).thenReturn(42L);
+    void totalPrompts_returnsRepositoryCount() {
+        when(promptRepository.count()).thenReturn(15L);
 
-        long total = promptService.totalPrompts();
+        long count = promptService.totalPrompts();
 
-        assertEquals(42L, total);
+        assertEquals(15L, count);
     }
 
     @Test
-    void createPromptPassesTrimmedEntityToRepository() {
-        PromptRequest request = new PromptRequest(
-                "  A  ", "  B  ", "  C  ", new BigDecimal("1.00"),
-                "  D  ", "  E  ", "  F  ", false
-        );
-        when(promptRepository.save(any(Prompt.class))).thenAnswer(invocation -> invocation.getArgument(0));
+    void deletePrompt_throwsWhenPromptMissing() {
+        when(promptRepository.findById(404L)).thenReturn(Optional.empty());
 
-        promptService.createPrompt(request);
+        NotFoundException error = assertThrows(NotFoundException.class, () -> promptService.deletePrompt(404L));
 
-        ArgumentCaptor<Prompt> captor = ArgumentCaptor.forClass(Prompt.class);
-        verify(promptRepository).save(captor.capture());
-        Prompt saved = captor.getValue();
-        assertEquals("A", saved.getTitle());
-        assertEquals("B", saved.getShortDescription());
-        assertEquals("C", saved.getContentText());
-        assertEquals("D", saved.getCategory());
-        assertEquals("E", saved.getTags());
-        assertEquals("F", saved.getImageUrl());
-        assertFalse(saved.isPublished());
+        assertEquals("Prompt not found", error.getMessage());
     }
 
-    private Prompt prompt(Long id, String title, boolean published) {
+    private Prompt samplePrompt(Long id, String title, boolean published) {
         Prompt prompt = new Prompt();
         prompt.setId(id);
         prompt.setTitle(title);
@@ -198,7 +195,7 @@ class PromptServiceTest {
         prompt.setPriceUsd(new BigDecimal("9.99"));
         prompt.setCategory("General");
         prompt.setTags("tag1,tag2");
-        prompt.setImageUrl("https://img.test/" + id);
+        prompt.setImageUrl("https://img/" + id);
         prompt.setPublished(published);
         return prompt;
     }
